Рефакторинг + документация